--- a/lab_2.css
+++ b/lab_2.css
@@ -6,6 +6,7 @@ body {
  .form_things {
     border: 2px solid;
     margin-right: 85%;
+    font-size: large;
  }
  
  
@@ -30,3 +31,9 @@ body {
     text-align: center;
  }
  
+ #Testudo {
+   display: block;
+   margin-left: auto;
+   margin-right: auto;
+   width: 50%;
+}
